# kwxFortran

./: .fortls  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  file_list.cmake  kwxgen.config.json  plan.md
.github/: copilot-instructions.md  wxffi-architecture.md
.github/agents/: README.md  kwxFortran.agent.md
cmake/: gfortran-toolchain.cmake  kwxgen.cmake
docs/: wxUiEditor_testing.md
examples/: controls_demo.f90  demo.f90  hello.f90  minimal.f90
src/: kwxApp.cpp  kwxFortran.manifest  kwxFortran.rc  kwx_bindings.f90  kwx_constants.f90  kwx_types.f90  wx_app.f90  wx_app.mod  wx_controls.f90  wx_controls.mod  wx_dialogs.f90  wx_events.f90  wx_events.mod  wx_frame.f90  wx_frame.mod  wx_menus.f90  wx_menus.mod  wx_sizers.f90  wx_sizers.mod  wx_string.f90  wx_string.mod  wx_window.f90  wx_window.mod  wxffi_bindings.f90  wxffi_bindings.mod  wxffi_constants.f90  wxffi_constants.mod  wxffi_types.f90  wxffi_types.mod
wx/: kwx_constants.f90  kwx_types.f90  kwxffi_gen.f90  wx_controls.f90  wx_dialogs.f90  wx_events.f90  wx_frame.f90  wx_menus.f90  wx_sizers.f90  wx_string.f90  wx_window.f90
